crates/uitest/fixtures/ty_check/method_bound/result_map_chain_second_mapper_bad.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/method_bound/result_map_chain_second_mapper_bad.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ result_map_chain_second_mapper_bad.fe:24:21
   │
24 │     r.map(ToWrap{}).map(StillNeedsU256{}).unwrap()
   │                     ^^^ `StillNeedsU256` doesn't implement `Fn<Wrap, u256>`
   │
   ┌─ src/result.fe:62:22
   │
62 │     pub fn map<U, F: Fn<T, U>>(own self, _ func: F) -> Result<E, U> {
   │                      -------- required by this bound on `map`

error[6-0003]: trait bound is not satisfied
   ┌─ result_map_chain_second_mapper_bad.fe:24:21
   │
24 │     r.map(ToWrap{}).map(StillNeedsU256{}).unwrap()
   │                     ^^^ `StillNeedsU256` doesn't implement `Fn<Wrap, u256>`
